Bug 1839578 - Allow ktlintFormat task to modify access java.lang class fields.